[package]
name = "osmarkscalculator"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "osmarkscalculator"

[[bin]]
name = "osmarkscalculator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
inlinable_string = "0.1"
itertools = "0.10"
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s"
lto = true